syntax = "proto3";

service GameService {
    rpc StartGame (StartGameReq) returns (StartGameRsp) {
    };
    rpc PingGame (PingGameReq) returns (PingGameRsp) {
    };
}

message PingGameReq {
}

message PingGameRsp {
}

message StartGameRsp {
}

message StartGameReq {
    string token = 1;
    string name = 2;
}

